add item users to swagger
