# api/routes/userRoute.js
@@ -1,7 +1,7 @@
 module.exports = (server) => {
     const userController = require('../controllers/userController');
 
-    server.route('/users/:school_id/users')
+    server.route('/schools/:school_id/users')
           .get(userController.list_all_users)
           .post(userController.create_an_user);
 
